# cybergames-web-app

./: .gitignore  README.md  config.yml  pyproject.toml
src/: app.py  config.py  db.py  helpers.py  models.py  views_game.py  views_user.py
templates/: cadastro.html  editar.html  index.html  login.html  novo.html  template.html
